Avoid displaying double borders for inline code snippets
Before we started using the 'code' tag for inline code snippets,
<code><syntaxhighlight enclose=none ...>...</syntaxhighlight></code>
was a common pattern. Continue supporting it in existing content.

Follow-up to 04293baad9e29d5b0283968b546c948f317338bd. My IRC comments
about this were seemingly forgotten, and the code I added in
5b7522a5fc4088792494c662cd06a794d9f77980 to handle this problem
unceremoniously removed.

Bug: T85794

--- a/modules/pygments.wrapper.css
+++ b/modules/pygments.wrapper.css
@@ -4,3 +4,13 @@
 	direction: ltr;
 	unicode-bidi: embed;
 }
+
+/* Avoid displaying double borders for nested 'code' elements.
+   Before we started using the 'code' tag for inline code snippets,
+   <code><syntaxhighlight enclose=none ...>...</syntaxhighlight></code>
+   was a common pattern. Continue supporting it in existing content. */
+code code.mw-highlight {
+	background-color: transparent;
+	border: 0;
+	padding: 0;
+}
